// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SimpleCardRow renders 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="row"
      >
        <th
          class="rowLabel"
        >
          test label
        </th>
        <td
          class="rowContent"
        >
          test content
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`SimpleCardRow renders with correct styling with extra class name 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="row"
      >
        <th
          class="rowLabel"
        >
          test label
        </th>
        <td
          class="rowContent test class name"
        >
          test content
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
